Added animation state machine and other small updates

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -146,7 +146,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Data
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -154,8 +154,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1035,26 +1034,26 @@ MovieSceneCapture.LastCompileMethod=Unknown
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScroller/Animations/PC_Shoot
-MRUItem2=/Game/2DSideScroller/Animations/PC_Hurt
-MRUItem3=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/Breakable_Block
-MRUItem5=/Game/2DSideScroller/Textures/StoneRuins_Shaking
-MRUItem6=/Game/2DSideScroller/Textures/StoneRuins_Animation
-MRUItem7=/Paper2D/MaskedUnlitSpriteMaterial
-MRUItem8=/Game/2DSideScroller/Textures/4_Briggs_StoneRuins_Sprite_3
-MRUItem9=/Game/2DSideScroller/Textures/Level1_TileSet_Ruins
-MRUItem10=/Game/2DSideScroller/Textures/4_Briggs_StoneRuins
-MRUItem11=/Game/2DSideScroller/Textures/Level1_StoneRuins
-MRUItem12=/Game/2DSideScroller/Sprites/4_Briggs_CharacterComplete_Sprite_2
-MRUItem13=/Game/2DSideScroller/Animations/PC_Run
-MRUItem14=/Game/2DSideScroller/Animations/PC_Idle
-MRUItem15=/Game/2DSideScroller/Animations/PC_Jump_Down
-MRUItem16=/Game/2DSideScroller/Animations/PC_Jump_Up
-MRUItem17=/Game/2DSideScroller/Animations/PC_Projectile
-MRUItem18=/Game/2DSideScroller/Sprites/4_Briggs_StoneRuins_Sprite_0
-MRUItem19=/Game/2DSideScroller/Textures/4_Briggs_CharacterComplete_Sprite_1
+MRUItem0=/Game/Data/AnimationState
+MRUItem1=/Game/2DSideScrollerBP/Blueprints/Breakable_Block
+MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem4=/Game/2DSideScroller/Animations/PC_Shoot
+MRUItem5=/Game/2DSideScroller/Animations/PC_Hurt
+MRUItem6=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins
+MRUItem7=/Game/2DSideScroller/Textures/StoneRuins_Shaking
+MRUItem8=/Game/2DSideScroller/Textures/StoneRuins_Animation
+MRUItem9=/Paper2D/MaskedUnlitSpriteMaterial
+MRUItem10=/Game/2DSideScroller/Textures/4_Briggs_StoneRuins_Sprite_3
+MRUItem11=/Game/2DSideScroller/Textures/Level1_TileSet_Ruins
+MRUItem12=/Game/2DSideScroller/Textures/4_Briggs_StoneRuins
+MRUItem13=/Game/2DSideScroller/Textures/Level1_StoneRuins
+MRUItem14=/Game/2DSideScroller/Sprites/4_Briggs_CharacterComplete_Sprite_2
+MRUItem15=/Game/2DSideScroller/Animations/PC_Run
+MRUItem16=/Game/2DSideScroller/Animations/PC_Idle
+MRUItem17=/Game/2DSideScroller/Animations/PC_Jump_Down
+MRUItem18=/Game/2DSideScroller/Animations/PC_Jump_Up
+MRUItem19=/Game/2DSideScroller/Animations/PC_Projectile
 
 [DetailCategories]
 Texture2D.Compression=True
@@ -1553,6 +1552,40 @@ ChildActorComponent.Tags=True
 ChildActorComponent.ComponentReplication=True
 ChildActorComponent.Variable=True
 ChildActorComponent.Cooking=True
+2DSideScrollerGameMode_C.Tick=True
+2DSideScrollerGameMode_C.Classes=True
+2DSideScrollerGameMode_C.Game=True
+2DSideScrollerGameMode_C.GameMode=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_GetInputAxisKeyValue.Input=True
+K2Node_InputVectorAxisEvent.Input=True
+2DSideScrollerGameMode_C.Default=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins.4_Briggs_StoneRuins=1
@@ -1574,6 +1607,7 @@ ChildActorComponent.Cooking=True
 /Game/2DSideScroller/Textures/4_Briggs_StoneRuins_Sprite_3.4_Briggs_StoneRuins_Sprite_3=1
 /Paper2D/MaskedUnlitSpriteMaterial.MaskedUnlitSpriteMaterial=1
 /Game/2DSideScroller/Textures/StoneRuins_Shaking.StoneRuins_Shaking=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode=1
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -1584,6 +1618,14 @@ CapsuleComponent=
 2DSideScrollerCharacter_C=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,
 K2Node_VariableGet=CameraComponent.PostProcess.Lens,
+Breakable_Block_C=
+PlayerStart=CameraComponent.PostProcess.Lens,
+Call Restart Player_6=CameraComponent.PostProcess.Lens,
+Call Restart Player=CameraComponent.PostProcess.Lens,
+K2Node_VariableSet=CameraComponent.PostProcess.Lens,
+PropertyWrapper=CameraComponent.PostProcess.Lens,
+Animation State Machine_5=CameraComponent.PostProcess.Lens,
+Animation State Machine=CameraComponent.PostProcess.Lens,
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1622,7 +1664,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [DetailPropertyExpansion]
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
@@ -1636,6 +1678,7 @@ PrimitiveComponent=
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/2DSideScrollerBP/Blueprints/Breakable_Block.Breakable_Block;
 RecentlyPlaced=/Game/2DSideScroller/Textures/Level1_TileMap_Ruins.Level1_TileMap_Ruins;
 
@@ -1705,4 +1748,14 @@ bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
+
+[/Script/Kismet.BlueprintPaletteFavorites]
+CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveBeginPlay",NodeName="/Script/BlueprintGraph.K2Node_Event")
+CustomFavorites=(FieldName="/Script/Engine.Actor:ReceiveTick",NodeName="/Script/BlueprintGraph.K2Node_Event")
+CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetPlayerPawn",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.Actor:GetTransform",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.Actor:K2_DestroyActor",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(FieldName="/Script/Engine.GameplayStatics:GetAllActorsOfClass",NodeName="/Script/BlueprintGraph.K2Node_CallFunction")
+CustomFavorites=(NodeName="/Script/BlueprintGraph.K2Node_SpawnActorFromClass")
+CurrentProfile=CustomProfile
 
