--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -144,7 +144,9 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Sprites
+ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Animations
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -175,7 +177,7 @@ UNR=../../../../../Users/5925010614/OneDrive - School Board of Seminole County/D
 BRUSH=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 FBX=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 FBXAnim=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
-GenericImport=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
+GenericImport=../../../../../Users/5925010614/Downloads/#_LastName_TileSet2a.png
 GenericExport=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 GenericOpen=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
 GenericSave=../../../../../Users/kizelerr/OneDrive - School Board of Seminole County/Documents/GameDesign2/GameDesign2/Content/
@@ -1017,6 +1019,10 @@ SceneOutliner.TimeStamp=2021.08.31-15.05.53
 SceneOutliner.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2021.08.31-15.05.48
 HierarchicalLODOutliner.LastCompileMethod=External
+TextureEditor.TimeStamp=2021.08.31-15.05.55
+TextureEditor.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2021.08.31-15.05.44
+BlueprintGraph.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -1047,17 +1053,123 @@ PaperExtractSpritesSettings.Settings=True
 PaperExtractSpritesSettings.Naming=True
 PaperExtractSpriteGridSettings.Grid=True
 PaperFlipbook.Sprite=True
+2DSideScrollerCharacter_C.TransformCommon=True
+2DSideScrollerCharacter_C.Sprite=True
+2DSideScrollerCharacter_C.Camera=True
+2DSideScrollerCharacter_C.Physics=True
+2DSideScrollerCharacter_C.Collision=True
+2DSideScrollerCharacter_C.Lighting=True
+2DSideScrollerCharacter_C.Rendering=True
+2DSideScrollerCharacter_C.Navigation=True
+2DSideScrollerCharacter_C.VirtualTexture=True
+2DSideScrollerCharacter_C.Tags=True
+2DSideScrollerCharacter_C.Activation=True
+2DSideScrollerCharacter_C.Cooking=True
+2DSideScrollerCharacter_C.Character=True
+2DSideScrollerCharacter_C.Character Movement (General Settings)=True
+2DSideScrollerCharacter_C.Character Movement: Walking=True
+2DSideScrollerCharacter_C.Character Movement: Jumping / Falling=True
+2DSideScrollerCharacter_C.Character Movement (Networking)=True
+2DSideScrollerCharacter_C.Character Movement: Swimming=True
+2DSideScrollerCharacter_C.Character Movement: Flying=True
+2DSideScrollerCharacter_C.Character Movement: Custom Movement=True
+2DSideScrollerCharacter_C.Character Movement (Rotation Settings)=True
+2DSideScrollerCharacter_C.Character Movement: Physics Interaction=True
+2DSideScrollerCharacter_C.Character Movement=True
+2DSideScrollerCharacter_C.Character Movement: Avoidance=True
+2DSideScrollerCharacter_C.RootMotion=True
+2DSideScrollerCharacter_C.Character Movement: NavMesh Movement=True
+2DSideScrollerCharacter_C.NavMovement=True
+2DSideScrollerCharacter_C.Velocity=True
+2DSideScrollerCharacter_C.PlanarMovement=True
+2DSideScrollerCharacter_C.MovementComponent=True
+2DSideScrollerCharacter_C.Shape=True
+2DSideScrollerCharacter_C.Pawn=True
+2DSideScrollerCharacter_C.Replication=True
+2DSideScrollerCharacter_C.Input=True
+2DSideScrollerCharacter_C.Actor=True
+2DSideScrollerCharacter_C.Materials=True
+PaperSpriteComponent.TransformCommon=True
+PaperSpriteComponent.Sprite=True
+PaperSpriteComponent.Materials=True
+PaperSpriteComponent.Physics=True
+PaperSpriteComponent.Collision=True
+PaperSpriteComponent.Lighting=True
+PaperSpriteComponent.Rendering=True
+PaperSpriteComponent.Navigation=True
+PaperSpriteComponent.VirtualTexture=True
+PaperSpriteComponent.Tags=True
+PaperSpriteComponent.Activation=True
+PaperSpriteComponent.Cooking=True
+2DSideScrollerCharacter_C.Tick=True
+2DSideScrollerCharacter_C.Default=True
+PaperFlipbookComponent.TransformCommon=True
+PaperFlipbookComponent.Sprite=True
+PaperFlipbookComponent.Materials=True
+PaperFlipbookComponent.Physics=True
+PaperFlipbookComponent.Collision=True
+PaperFlipbookComponent.Lighting=True
+PaperFlipbookComponent.Rendering=True
+PaperFlipbookComponent.Navigation=True
+PaperFlipbookComponent.VirtualTexture=True
+PaperFlipbookComponent.Tags=True
+PaperFlipbookComponent.Activation=True
+PaperFlipbookComponent.Cooking=True
+PaperFlipbookActor.TransformCommon=True
+PaperFlipbookActor.Sprite=True
+PaperFlipbookActor.Materials=True
+PaperFlipbookActor.Physics=True
+PaperFlipbookActor.Collision=True
+PaperFlipbookActor.Lighting=True
+PaperFlipbookActor.Rendering=True
+PaperFlipbookActor.Navigation=True
+PaperFlipbookActor.VirtualTexture=True
+PaperFlipbookActor.Tags=True
+PaperFlipbookActor.Activation=True
+PaperFlipbookActor.Cooking=True
+PaperFlipbookActor.Replication=True
+PaperFlipbookActor.Input=True
+PaperFlipbookActor.Actor=True
+CameraComponent.TransformCommon=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/2DSideScroller/Animations/Pc_Shoot
-MRUItem1=/Game/2DSideScroller/Animations/Pc_Run
-MRUItem2=/Game/2DSideScroller/Animations/Pc_Hurt
-MRUItem3=/Game/2DSideScroller/Animations/Pc_Projectile
-MRUItem4=/Game/2DSideScroller/Animations/Pc_JumpShoot
-MRUItem5=/Game/2DSideScroller/Animations/Pc_JumpUp
-MRUItem6=/Game/2DSideScroller/Animations/Pc_JumpDown
-MRUItem7=/Game/2DSideScroller/Animations/Pc_Idle
-MRUItem8=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem1=/Game/2DSideScroller/Animations/Pc_Shoot
+MRUItem2=/Game/2DSideScroller/Animations/Pc_Run
+MRUItem3=/Game/2DSideScroller/Animations/Pc_Hurt
+MRUItem4=/Game/2DSideScroller/Animations/Pc_Projectile
+MRUItem5=/Game/2DSideScroller/Animations/Pc_JumpShoot
+MRUItem6=/Game/2DSideScroller/Animations/Pc_JumpUp
+MRUItem7=/Game/2DSideScroller/Animations/Pc_JumpDown
+MRUItem8=/Game/2DSideScroller/Animations/Pc_Idle
+MRUItem9=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/Pc_Hurt.Pc_Hurt=1
@@ -1068,8 +1180,51 @@ MRUItem8=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 /Game/2DSideScroller/Animations/Pc_Projectile.Pc_Projectile=1
 /Game/2DSideScroller/Animations/Pc_Run.Pc_Run=1
 /Game/2DSideScroller/Animations/Pc_Shoot.Pc_Shoot=1
+/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
-Object="\"Object.Sprite.KeyFrames\" "
+Object=
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+
+[PlacementMode]
+RecentlyPlaced=/Game/2DSideScroller/Animations/Pc_Idle.Pc_Idle;
 
