added run and idle

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,12 +147,14 @@ ContentBrowserTab1.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/2DSideScroller/Animations
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1023,6 +1025,10 @@ TextureEditor.TimeStamp=2021.08.31-15.05.55
 TextureEditor.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2021.08.31-15.05.44
 BlueprintGraph.LastCompileMethod=Unknown
+Voice.TimeStamp=2021.08.31-15.05.56
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2021.08.31-15.05.51
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
