--- a/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/SourceControlSettings.ini
@@ -5,5 +5,11 @@ Workspace=
 HostOverride=
 
 [SourceControl.SourceControlSettings]
-Provider=Git
+Provider=None
+
+[SubversionSourceControl.SubversionSourceControlSettings]
+Repository=
+UserName=
+LabelsRoot=
+ExecutableLocation=
 
