Changed Character Size & Cam Settings

--- a/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameDesign2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -154,7 +154,8 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter
 
 [RootWindow]
 ScreenPosition=X=313.000 Y=153.000
@@ -1029,6 +1030,8 @@ Voice.TimeStamp=2021.08.31-15.05.56
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2021.08.31-15.05.51
 MovieSceneCapture.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2021.08.31-15.05.48
+ExternalImagePicker.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
@@ -1164,18 +1167,310 @@ PostProcessVolume.PostProcessVolumeSettings=True
 PostProcessVolume.Replication=True
 PostProcessVolume.BrushSettings=True
 PostProcessVolume.Actor=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=False
+WorldSettings.Physics=False
+WorldSettings.Broadphase=True
+WorldSettings.VR=False
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
+PaperSprite.Sprite=True
+PaperSprite.Sockets=True
+PaperSprite.Collision=True
+PaperSprite.Rendering=True
+CryptoKeysSettings.Encryption=True
+CryptoKeysSettings.Signing=True
+GeneralProjectSettings.About=True
+GeneralProjectSettings.Publisher=True
+GeneralProjectSettings.Legal=True
+GeneralProjectSettings.Displayed=True
+GeneralProjectSettings.Settings=True
+GameplayTagsSettings.GameplayTags=True
+GameplayTagsSettings.Advanced Replication=True
+GameMapsSettings.DefaultModes=True
+GameMapsSettings.DefaultMaps=True
+GameMapsSettings.LocalMultiplayer=True
+GameMapsSettings.GameInstance=True
+MoviePlayerSettings.Movies=True
+ProjectPackagingSettings.Packaging=True
+ProjectPackagingSettings.Project=True
+ProjectPackagingSettings.Blueprints=True
+ProjectPackagingSettings.Prerequisites=True
+HardwareTargetingSettings.Target Hardware=True
+HardwareTargetingSettings.Pending Changes=True
+AssetManagerSettings.Asset Manager=True
+AssetManagerSettings.Redirects=True
+AssetToolsSettings.Asset Tools=True
+AISystem.AISystem=True
+AISystem.Movement=True
+AISystem.Gameplay Tasks=True
+AISystem.EQS=True
+AISystem.Blackboard=True
+AISystem.PerceptionSystem=True
+AnimationSettings.Compression=True
+AnimationSettings.Performance=True
+AnimationSettings.CustomAttributes=True
+AudioSettings.Dialogue=True
+AudioSettings.Audio=True
+AudioSettings.Mix=True
+AudioSettings.Quality=True
+ChaosSolverSettings.GameInstance=True
+CollisionProfile.Object Channels=True
+CollisionProfile.Trace Channels=True
+ConsoleSettings.General=True
+ConsoleSettings.AutoComplete=True
+ConsoleSettings.Colors=True
+CookerSettings.Cooker=True
+CookerSettings.Textures=True
+CookerSettings.Editor=True
+CrowdManager.Config=True
+DebugCameraControllerSettings.General=True
+GameplayDebuggerConfig.Input=True
+GameplayDebuggerConfig.Display=True
+GameplayDebuggerConfig.AddOns=True
+GarbageCollectionSettings.General=True
+GarbageCollectionSettings.Optimization=True
+Engine.Fonts=True
+Engine.DefaultClasses=True
+Engine.DefaultMaterials=True
+Engine.Settings=True
+Engine.Subtitles=True
+Engine.Blueprints=True
+Engine.Anim Blueprints=True
+Engine.Framerate=True
+Engine.Timecode=True
+Engine.Screenshots=True
+HierarchicalLODSettings.HLODSystem=True
+InputSettings.Bindings=True
+InputSettings.ViewportProperties=True
+InputSettings.Mobile=True
+InputSettings.Virtual Keyboard (Mobile)=True
+InputSettings.DefaultClasses=True
+InputSettings.Console=True
+LandscapeSettings.Layers=True
+RecastNavMesh.Display=True
+RecastNavMesh.Generation=True
+RecastNavMesh.Query=True
+RecastNavMesh.Runtime=True
+RecastNavMesh.Tick=True
+RecastNavMesh.Collision=True
+NavigationSystemV1.Navigation=True
+NavigationSystemV1.NavigationSystem=True
+NavigationSystemV1.Navigation Enforcing=True
+NavigationSystemV1.Agents=True
+NetworkSettings.libcurl=True
+NetworkSettings.World=True
+NetworkSettings.replication=True
+PhysicsSettings.Replication=True
+PhysicsSettings.Simulation=True
+PhysicsSettings.Optimization=True
+PhysicsSettings.Framerate=True
+PhysicsSettings.Broadphase=True
+PhysicsSettings.ChaosPhysics=True
+PhysicsSettings.Constants=True
+PhysicsSettings.Physical Surface=True
+RendererSettings.Mobile=True
+RendererSettings.Materials=True
+RendererSettings.Culling=True
+RendererSettings.Textures=True
+RendererSettings.VirtualTextures=True
+RendererSettings.Reflections=True
+RendererSettings.ForwardRenderer=True
+RendererSettings.Lighting=True
+RendererSettings.Tessellation=True
+RendererSettings.Translucency=True
+RendererSettings.Postprocessing=True
+RendererSettings.DefaultSettings=True
+RendererSettings.Optimizations=True
+RendererSettings.Debugging=True
+RendererSettings.VR=True
+RendererSettings.Experimental=True
+RendererSettings.Editor=True
+RendererSettings.RayTracing=True
+RendererSettings.ShaderPermutationReduction=True
+RendererSettings.MobileShaderPermutationReduction=True
+RendererSettings.Skinning=True
+RendererSettings.PostProcessCalibrationMaterials=True
+RendererOverrideSettings.ShaderPermutationReduction=True
+RendererOverrideSettings.Miscellaneous=True
+SlateSettings.ConstraintCanvas=True
+StreamingSettings.PackageStreaming=True
+StreamingSettings.LevelStreaming=True
+StreamingSettings.General=True
+StreamingSettings.Deprecated Settings=True
+TutorialSettings.Tutorials=True
+UserInterfaceSettings.Focus=True
+UserInterfaceSettings.Hardware Cursors=True
+UserInterfaceSettings.Software Cursors=True
+UserInterfaceSettings.DPI Scaling=True
+UserInterfaceSettings.Widgets=True
+LevelEditor2DSettings.General=True
+LevelEditor2DSettings.LayerSnapping=True
+EditorProjectAppearanceSettings.Units=True
+BlueprintEditorProjectSettings.Blueprints=True
+BlueprintEditorProjectSettings.Actors=True
+BlueprintEditorProjectSettings.Experimental=True
+ClassViewerProjectSettings.ClassVisibilityManagement=True
+ProxyLODMeshSimplificationSettings.General=True
+MovieSceneToolsProjectSettings.Timeline=True
+MovieSceneToolsProjectSettings.Shots=True
+MovieSceneToolsProjectSettings.TrackSettings=True
+MeshSimplificationSettings.General=True
+PaperImporterSettings.NewAssetSettings=True
+PaperImporterSettings.ImportSettings=True
+PaperImporterSettings.MaterialSettings=True
+SkeletalMeshSimplificationSettings.General=True
+StructViewerProjectSettings.StructVisibilityManagement=True
+TextureImportSettings.VirtualTextures=True
+UMGEditorProjectSettings.Compiler=True
+UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
+AndroidRuntimeSettings.APK Packaging=True
+AndroidRuntimeSettings.App Bundles=True
+AndroidRuntimeSettings.Build=True
+AndroidRuntimeSettings.Advanced APK Packaging=True
+AndroidRuntimeSettings.DistributionSigning=True
+AndroidRuntimeSettings.GooglePlayServices=True
+AndroidRuntimeSettings.Icons=True
+AndroidRuntimeSettings.LaunchImages=True
+AndroidRuntimeSettings.Input=True
+AndroidRuntimeSettings.DaydreamAppTile=True
+AndroidRuntimeSettings.GraphicsDebugger=True
+AndroidRuntimeSettings.Audio=True
+AndroidRuntimeSettings.MultiTextureFormats=True
+AndroidRuntimeSettings.TextureFormatPriorities=True
+AndroidRuntimeSettings.Misc=True
+ShaderPlatformQualitySettings.Forward Rendering Overrides=True
+AndroidSDKSettings.SDKConfig=True
+IOSRuntimeSettings.Mobile Provision=True
+IOSRuntimeSettings.BundleInformation=True
+IOSRuntimeSettings.Orientation=True
+IOSRuntimeSettings.Input=True
+IOSRuntimeSettings.FileSystem=True
+IOSRuntimeSettings.Rendering=True
+IOSRuntimeSettings.OS Info=True
+IOSRuntimeSettings.Devices=True
+IOSRuntimeSettings.PowerUsage=True
+IOSRuntimeSettings.Build=True
+IOSRuntimeSettings.Online=True
+IOSRuntimeSettings.Extra PList Data=True
+IOSRuntimeSettings.Required Icons=True
+IOSRuntimeSettings.Optional Icons=True
+IOSRuntimeSettings.LaunchScreen=True
+IOSRuntimeSettings.Audio=True
+IOSRuntimeSettings.Misc=True
+LinuxTargetSettings.Targeted RHIs=True
+LinuxTargetSettings.Splash=True
+LinuxTargetSettings.Icon=True
+LinuxTargetSettings.Audio=True
+MacTargetSettings.Targeted RHIs=True
+MacTargetSettings.Rendering=True
+MacTargetSettings.Packaging=True
+MacTargetSettings.Splash=True
+MacTargetSettings.Icon=True
+MacTargetSettings.Audio=True
+LuminRuntimeSettings.Audio=True
+LuminRuntimeSettings.MPK Packaging=True
+LuminRuntimeSettings.Runtime=True
+LuminRuntimeSettings.Magic Leap App Tile=True
+LuminRuntimeSettings.Distribution Signing=True
+LuminRuntimeSettings.Build=True
+LuminRuntimeSettings.Advanced MPK Packaging=True
+LuminRuntimeSettings.AdvancedBuild=True
+LuminRuntimeSettings.Rendering=True
+MagicLeapSDKSettings.SDKConfig=True
+WindowsTargetSettings.Targeted RHIs=True
+WindowsTargetSettings.Toolchain=True
+WindowsTargetSettings.OS Info=True
+WindowsTargetSettings.Splash=True
+WindowsTargetSettings.Icon=True
+WindowsTargetSettings.Audio=True
+AvfMediaSettings.Debug=True
+GooglePADRuntimeSettings.Packaging=True
+ImgMediaSettings.General=True
+ImgMediaSettings.Caching=True
+ImgMediaSettings.EXR=True
+ImgMediaSettings.Proxies=True
+LevelSequenceEditorSettings.Tracks=True
+LevelSequenceEditorSettings.Playback=True
+MagicLeapSettings.General=True
+MagicLeapARPinSettings.ARPin=True
+NiagaraSettings.Niagara=True
+NiagaraSettings.Scalability=True
+NiagaraSettings.Renderer=True
+NiagaraEditorSettings.Niagara=True
+NiagaraEditorSettings.SimulationOptions=True
+PaperRuntimeSettings.Experimental=True
+PaperRuntimeSettings.Settings=True
+SteamVREditorSettings.SteamVR Input=True
+SteamVREditorSettings.SteamVR Editor Settings=True
+TcpMessagingSettings.Transport=True
+UdpMessagingSettings.Availability=True
+UdpMessagingSettings.Transport=True
+UdpMessagingSettings.Tunnel=True
+WmfMediaSettings.Media=True
+WmfMediaSettings.Debug=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+PaperFlipbookComponent.Variable=True
+PaperFlipbookComponent.Sockets=True
+PaperFlipbookComponent.ComponentTick=True
+PaperFlipbookComponent.ComponentReplication=True
+PaperFlipbookComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Events=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem1=/Game/2DSideScroller/Animations/Pc_Shoot
-MRUItem2=/Game/2DSideScroller/Animations/Pc_Run
-MRUItem3=/Game/2DSideScroller/Animations/Pc_Hurt
-MRUItem4=/Game/2DSideScroller/Animations/Pc_Projectile
-MRUItem5=/Game/2DSideScroller/Animations/Pc_JumpShoot
-MRUItem6=/Game/2DSideScroller/Animations/Pc_JumpUp
-MRUItem7=/Game/2DSideScroller/Animations/Pc_JumpDown
-MRUItem8=/Game/2DSideScroller/Animations/Pc_Idle
-MRUItem9=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
+MRUItem1=/Game/2DSideScroller/Sprites/Background_Sprite
+MRUItem2=/Game/2DSideScroller/Animations/Pc_Shoot
+MRUItem3=/Game/2DSideScroller/Animations/Pc_Run
+MRUItem4=/Game/2DSideScroller/Animations/Pc_Hurt
+MRUItem5=/Game/2DSideScroller/Animations/Pc_Projectile
+MRUItem6=/Game/2DSideScroller/Animations/Pc_JumpShoot
+MRUItem7=/Game/2DSideScroller/Animations/Pc_JumpUp
+MRUItem8=/Game/2DSideScroller/Animations/Pc_JumpDown
+MRUItem9=/Game/2DSideScroller/Animations/Pc_Idle
+MRUItem10=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScroller/Animations/Pc_Hurt.Pc_Hurt=1
@@ -1187,6 +1482,8 @@ MRUItem9=/Game/2DSideScroller/Textures/__Lastname_CharacterComplete
 /Game/2DSideScroller/Animations/Pc_Run.Pc_Run=1
 /Game/2DSideScroller/Animations/Pc_Shoot.Pc_Shoot=1
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
+/Game/2DSideScroller/Sprites/Background_Sprite.Background_Sprite=1
+/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.WorldInfo_0=1
 
 [DetailPropertyExpansion]
 PaperFlipbook="\"Object.Sprite.KeyFrames\" "
@@ -1194,6 +1491,8 @@ Object=
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+WorldSettings="\"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
+Info="\"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.OutputUVs\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1233,4 +1532,16 @@ NodeTemplateCacheCapMB=20.000000
 
 [PlacementMode]
 RecentlyPlaced=/Game/2DSideScroller/Animations/Pc_Idle.Pc_Idle;
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
+
+[DetailMultiObjectNodeExpansion]
+CryptoKeysSettings=True
+GeneralProjectSettings=True
 
